<resources>

    <string name="app_name" translatable="false">Smokegator Solo</string>
    <string name="google_maps_key" translatable="false">AIzaSyDFhWSLNrtFdYiOOL65SWy31ILfjSKRKQA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Smokegator Solo</string>
    <string name="nav_header_subtitle">Offline wildfire smoke pelengator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_list">List of pelengs</string>

    <string name="menu_pelengator">Pelengator</string>

    <string name="error_permission_map">Permissions not found</string>
    <string name="title_location_permission">Permission</string>
    <string name="text_location_permission">Permit access to location</string>
    <string name="ok" translatable="false">ОК</string>

    <!--<string name="az">Азимут</string> -->
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string> <!-- Depricated, saved just in case -->
    <string name="lng">Longitude</string>
    <string name="lat_hint" translatable="false">00.000</string>
    <string name="lon_hint" translatable="false">00.000</string>
    <string name="input_peleng">Peleng input</string>
    <string name="send">Send</string>
    <string name="clipboard_button">Get from clipboard</string>
    <string name="bearing">Bearing</string>
    <string name="m_bearing">magnetic</string>
    <string name="t_bearing">true</string>
    <string name="bearing_hint" translatable="false">000.0</string>
    <string name="GPS_On">GPS on</string>
    <string name="GPS_Off">GPS off</string>
    <string name="GPS_ToggleButton">GPS ToggleButton</string>
    <string name="accuracy">accuracy</string>
    <string name="inclination">inclination</string>
    <string name="callsign">callsign</string>
    <string name="timestamp">Timestamp</string>
    <string name="comment">comment</string>
    <string name="save_button">Save</string>

    <string name="no_pelengs">No Pelengs</string>

    <string name="menu_settings">Settings</string>

    <string name="settings_header">Settings</string>
    <string name="maptype_title">Map type</string>
    <string name="peleng_length">Peleng length</string>
    <string name="peleng_length_summary">Length of the peleng, 0 to 50 km</string>
    <string name="user_callsign">Choose user callsign</string>
    <string name="color_dialog_title">Select a color</string>
    <string name="color_marker_default_title">Peleng marker color</string>
    <string name="color_marker_default_summary">Choose peleng marker color</string>
    <string name="color_line_default_title">Peleng line color</string>
    <string name="color_line_default_summary">Choose peleng line color</string>
    <string name="show_peleng_sector_off">Hide peleng accurecy sector</string>
    <string name="show_peleng_sector_on">Show peleng accurecy sector</string>
    <string name="show_peleng_sector_title">Peleng accuracy sector</string>
    <string name="color_sector_default_title">Peleng sector color</string>
    <string name="color_sector_default_summary">Choose peleng sector color</string>


    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- Error messages -->
    <string name="errormsg_lat">Latitude cannot be more than 90 degrees</string>
    <string name="errormsg_lng">Longitude cannot be more than 180 degrees</string>
    <string name="errormsg_bearing">Peleng value cannot be more than 360 degrees</string>
    <string name="errormsg_bearing_neg">Peleng value cannot be negative</string>

    <string name="location_rational_message">Location permission is necessary for positioning.</string>

</resources>
