<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">
        <EditTextPreference
            app:key="callsign"
            app:title="@string/user_callsign"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:entries="@array/map_maptype_entries"
            app:entryValues="@array/map_maptype_values"
            app:key="maptype"
            app:title="@string/maptype_title"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:key="pelenglength"
            app:title="@string/peleng_length"
            app:summary="@string/peleng_length_summary"
            app:defaultValue="20"/>

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/color_marker_default"
            android:key="normal_marker_color"
            android:summary="@string/color_marker_default_summary"
            android:title="@string/color_marker_default_title"
            app:cpv_showAlphaSlider="true"
            app:cpv_dialogTitle="@string/color_dialog_title"/>

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/color_line_default"
            android:key="normal_line_color"
            android:summary="@string/color_line_default_summary"
            android:title="@string/color_line_default_title"
            app:cpv_showAlphaSlider="true"
            app:cpv_dialogTitle="@string/color_dialog_title"/>

        <!--
        <SwitchPreferenceCompat
            app:key="show_peleng_sector"
            app:summaryOff="@string/show_peleng_sector_off"
            app:summaryOn="@string/show_peleng_sector_on"
            app:title="@string/show_peleng_sector_title" />
            -->

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/color_sector_default"
            android:key="normal_sector_color"
            android:summary="@string/color_sector_default_summary"
            android:title="@string/color_sector_default_title"

            app:cpv_showAlphaSlider="true"
            app:cpv_dialogTitle="@string/color_dialog_title"/>


    </PreferenceCategory>


</PreferenceScreen>
