<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="wildfire.volunteers.smokegator.solo.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_list"
        android:name="wildfire.volunteers.smokegator.solo.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_pelengator"
        android:name="wildfire.volunteers.smokegator.solo.ui.pelengator.PelengatorFragment"
        android:label="@string/menu_pelengator"
        tools:layout="@layout/fragment_pelengator" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="wildfire.volunteers.smokegator.solo.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_arpelengator"
        android:name="wildfire.volunteers.smokegator.solo.ui.arpelengator.ARpelengatorFragment"
        android:label="@string/menu_arpelengator"
        tools:layout="@layout/fragment_arpelengator" />

    <fragment
        android:id="@+id/nav_share"
        android:name="wildfire.volunteers.smokegator.solo.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="wildfire.volunteers.smokegator.solo.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>